--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,8 +29,9 @@
         <item name="android:paddingTop">0dip</item>
     </style>
 
-    <style name="Label" parent="Header">
-        <item name="android:paddingTop">11dip</item>
+    <style name="Label" parent="DefaultColumn">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#008</item>
     </style>
 
     <style name="NumberColumn" parent="DefaultColumn">
@@ -43,11 +44,15 @@
         <item name="android:enabled">false</item>
     </style>
 
-    <style name="DeviceNameColumn" parent="DefaultColumn">
+    <style name="ConnectionNameColumn" parent="DefaultColumn">
         <item name="android:gravity">start</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:paddingTop">6dip</item>
+        <item name="android:paddingBottom">6dip</item>
     </style>
 
-    <style name="DeviceTypeLabel" parent="DeviceNameColumn">
+    <style name="DeviceTypeLabel" parent="ConnectionNameColumn">
         <item name="android:textSize">10sp</item>
         <item name="android:textStyle">normal|bold</item>
     </style>
@@ -72,9 +77,12 @@
         <item name="android:layout_height">25dp</item>
     </style>
 
-    <style name="BatteryColumn" parent="StatusCircle">
-        <item name="android:layout_width">30dp</item>
+    <style name="BatteryColumn">
+        <!--<item name="android:layout_margin">0dp</item>-->
+        <item name="android:layout_width">32dp</item>
         <item name="android:layout_height">30dp</item>
+        <item name="android:layout_gravity">center_vertical|left</item>
+        <item name="android:paddingLeft">2dp</item>
     </style>
 
     <style name="ServerStatusLabel">
@@ -98,11 +106,18 @@
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
-    <style name="BatteryValue" parent="DefaultColumn">
+    <style name="BatteryValue" parent="BatteryColumn">
         <item name="android:textSize">8sp</item>
         <item name="android:textStyle">normal|bold</item>
-        <item name="android:paddingLeft">21dip</item>
-        <item name="android:paddingTop">21dip</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:rotation">-90</item>
+        <!--
+        <item name="android:shadowColor">#000</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        -->
     </style>
 
     <!-- Compact View styles -->
