--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,6 +72,7 @@
 
     <style name="StatusCircle">
         <item name="android:layout_margin">11dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_width">25dp</item>
         <item name="android:layout_height">25dp</item>
