--- a/app/src/main/res/layout/compact_overview.xml
+++ b/app/src/main/res/layout/compact_overview.xml
@@ -83,14 +83,23 @@
             android:columnCount="2"
             android:rowCount="1">
 
-            <TextView
-                android:id="@+id/statusServerMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <View
+                android:id="@+id/conn_status_icon"
+                style="@style/StatusCircle"
                 android:layout_marginStart="5dp"
                 android:layout_gravity="center"
                 android:layout_row="0"
                 android:layout_column="0"
+                android:background="@drawable/status_disconnected" />
+
+            <TextView
+                android:id="@+id/statusServerMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="5dp"
+                android:layout_row="0"
                 android:text="@string/sync_default" />
 
         </GridLayout>
