--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,13 @@
         <item name="android:paddingTop">6dip</item>
         <item name="android:paddingBottom">6dip</item>
     </style>
+    <style name="SecondaryCell" parent="DefaultColumn">
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">normal|bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingTop">0dip</item>
+        <item name="android:paddingBottom">6dip</item>
+    </style>
 
     <style name="DeviceTypeLabel" parent="ConnectionNameColumn">
         <item name="android:textSize">10sp</item>
